--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "build": "tsc",
+    "run": "nodemon dist/bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,9 +23,12 @@
     "chalk": "^5.1.2",
     "dotenv": "^16.0.3",
     "eris": "^0.17.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mp3-duration": "^1.1.0",
+    "youtube-dl.js": "^1.1.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/node": "^18.11.9",
+    "typescript": "^4.8.4"
   }
 }
